[gd_scene load_steps=6 format=3 uid="uid://b1q0witv3fv4h"]

[ext_resource type="Theme" uid="uid://d27dsxdcf0ldf" path="res://Card_theme.tres" id="1_3gl0i"]
[ext_resource type="Script" uid="uid://dbyekoe76u1r8" path="res://Scenes/weighed_scales.gd" id="2_1vaiu"]
[ext_resource type="Texture2D" uid="uid://c0bsl87ohcubt" path="res://Assets/PNG-cards-1.3/10_of_spades.png" id="3_l53wo"]
[ext_resource type="Theme" uid="uid://twfci1goorii" path="res://Assets/Text theme.tres" id="4_e8iam"]
[ext_resource type="Theme" uid="uid://bs82185dtcax6" path="res://Assets/Button theme.tres" id="5_2tjnh"]

[node name="Weighed_scales" type="Button" groups=["cards"]]
offset_right = 100.0
offset_bottom = 130.0
theme = ExtResource("1_3gl0i")
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
script = ExtResource("2_1vaiu")

[node name="Card_texture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("3_l53wo")
expand_mode = 1

[node name="Discription_Box" type="Panel" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.0
offset_right = 260.0
offset_bottom = 131.0

[node name="Name" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_right = 156.0
offset_bottom = 45.0
theme = ExtResource("4_e8iam")
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
text = "Weighted Scales"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Discription" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 43.0
offset_right = 156.0
offset_bottom = 129.0
theme = ExtResource("4_e8iam")
theme_override_font_sizes/font_size = 14
text = "Increases chaces of rolling 1's or highest for respective dice (6's or 10's)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Buy_btn" type="Button" parent="Discription_Box"]
layout_mode = 0
offset_left = -97.0
offset_top = 96.0
offset_right = -15.0
offset_bottom = 128.0
scale = Vector2(1.00552, 0.98905)
theme = ExtResource("5_2tjnh")
text = "BUY"

[node name="sell_btn" type="Button" parent="Discription_Box"]
visible = false
layout_mode = 0
offset_left = -97.0
offset_top = 96.0
offset_right = -15.0
offset_bottom = 128.0
scale = Vector2(1.00552, 0.98905)
theme = ExtResource("5_2tjnh")
text = "SELL
"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Discription_Box/Buy_btn" to="." method="_on_buy_btn_pressed"]
[connection signal="pressed" from="Discription_Box/sell_btn" to="." method="_on_sell_btn_pressed"]
